<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context="com.example.arya.netexam.MainActivity">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hello"
                    android:textSize="12pt"
                    android:layout_marginTop="@dimen/activity_vertical_margin"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friend"
                    android:textSize="8pt"/>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/loginTIL"
                    app:hintTextAppearance="@style/MyHintText"
                    app:errorEnabled="true">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/login"
                            android:inputType="textPersonName"
                            android:hint="@string/login"
                            android:text="Log"
                            android:maxLength="40"
                            android:theme="@style/MyEditText"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/passwordTIL"
                    app:hintTextAppearance="@style/MyHintText"
                    app:errorEnabled="true">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/password"
                        android:inputType="textPassword"
                        android:hint="@string/password"
                        android:text="passwordpassword"
                        android:maxLength="40"
                        android:theme="@style/MyEditText"/>
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/entry"
                    android:text="@string/entry"
                    android:layout_margin="5pt"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_registered"
                    android:textSize="8pt"
                    android:layout_marginTop="12pt"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/registration_main"
                    android:text="@string/registration"
                    android:layout_margin="5pt"/>

        </LinearLayout>
</ScrollView>
