<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.arya.netexam.RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/who"
            android:id="@+id/textView"
            android:textSize="8pt" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginTIL"
            app:hintTextAppearance="@style/MyHintText"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login"
                android:text="Log"
                android:id="@+id/login"
                android:inputType="textPersonName"
                android:maxLength="40"
                android:theme="@style/MyEditText"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordTIL"
            app:hintTextAppearance="@style/MyHintText"
            app:errorEnabled="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:text="passwordpassword"
                android:id="@+id/password"
                android:maxLength="40"
                android:theme="@style/MyEditText"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/repeat_passwordTIL"
            app:hintTextAppearance="@style/MyHintText"
            app:errorEnabled="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/repeat_password"
                android:text="passwordpassword"
                android:id="@+id/repeat_password"
                android:maxLength="40"
                android:theme="@style/MyEditText"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.ButtonBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="0pt"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/teacher_btn"
                android:text="@string/teacher"/>
            <Button
                android:layout_width="0pt"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/student_btn"
                android:text="@string/student"/>
        </android.support.v7.widget.ButtonBarLayout>
    </LinearLayout>
</ScrollView>
